<resources>
    <string name="app_name">PersonalBest</string>
    <string name="the_current_time">The current time</string>
    <string name="submit_time">Submit Time</string>
    <string name="add_friend">Add Friend</string>
    <string name="email_prompt">Enter Friend\'s Email</string>
    <string name="submit_friend_btn">Add</string>

    <string name="web_client_id">176288584716-211ilnhs82khcup8bi6uquim7kmk4cvd.apps.googleusercontent.com</string>

    <string name="title_walk_start">Start walk/run</string>
    <string name="title_walk_stop">End walk/run</string>
    <string name="title_new_stepgoal">New Step Goal</string>
    <string name="title_weekly_snapshot">Weekly Overview</string>
    <string name="title_monthly_snapshot">Monthly Overview</string>
    <string name="title_friends">Friends List</string>

    <string name="display_record_steps">Your Steps: %1$d steps</string>
    <string name="display_record_time">Your Time: %1$.2f sec</string>
    <string name="display_record_speed">Your Speed: %1$.2f mph</string>
    <string name="display_height">Your Height: %1$.2f m</string>
    <string name="display_stepgoal">Your Step Goal: %1$d steps</string>
    <string name="display_stepgoal_none">Your Step Goal: ---</string>
    <string name="display_steptotal">Your Total Steps: %1$d steps</string>
    <string name="title_height_prompt">Enter your height in meters:</string>
    <string name="title_stepgoal_prompt">Set your new step goal:</string>
    <string name="prompt_confirm">Ok</string>
    <string name="prompt_cancel">Cancel</string>
    <string name="encouragement_nearly_significant">Good job! You have nearly doubled your steps since yesterday!</string>
    <string name="encouragement_significant">Amazing! You have doubled your steps since yesterday!</string>
    <string name="title_activity_monthly">MonthlyActivity</string>
</resources>
